--- a/src/shared/ui/button/Button.module.scss
+++ b/src/shared/ui/button/Button.module.scss
@@ -1,10 +1,10 @@
 .button {
+  color: var(--inverted-primary-color);
   cursor: pointer;
 }
 
 .clear {
   padding: 0;
-  margin: 0;
   border: 0;
   background: none;
   outline: none;
