--- a/src/widgets/sidebar/ui/sidebar/Sidebar.module.scss
+++ b/src/widgets/sidebar/ui/sidebar/Sidebar.module.scss
@@ -1,9 +1,8 @@
 .sidebar {
-  height: calc(100vh - var(--navbar-height));
-  width: var(--sidebar-width);
-  background: var(--inverted--bg-color);
-
   position: relative;
+  width: var(--sidebar-width);
+  height: calc(100vh - var(--navbar-height));
+  background: var(--inverted-bg-color);
   transition: width 0.3s;
 }
 
@@ -13,9 +12,8 @@
 
 .switchers {
   position: absolute;
-  
+  bottom: 20px;
   display: flex;
   justify-content: center;
   width: 100%;
-  bottom: 20px;
 }
