--- a/src/shared/ui/button/Button.module.scss
+++ b/src/shared/ui/button/Button.module.scss
@@ -9,3 +9,10 @@
   border: 0;
   outline: none;
 }
+
+.outline {
+  padding: 10px 15px;
+  color: var(--inverted-primary-color);
+  background: none;
+  border: 1px solid var(--inverted-primary-color)
+}
