--- a/src/widgets/sidebar/ui/sidebar/Sidebar.module.scss
+++ b/src/widgets/sidebar/ui/sidebar/Sidebar.module.scss
@@ -6,14 +6,62 @@
   transition: width 0.3s;
 }
 
-.collapsed {
-  width: var(--sidebar-width-collapsed);
-}
-
 .switchers {
   position: absolute;
   bottom: 20px;
   display: flex;
   justify-content: center;
   width: 100%;
+}
+
+.lang {
+  margin-left: 20px;
+}
+
+.button {
+  position: absolute;
+  right: -32px;
+  bottom: 32px;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  margin-left: 30px;
+}
+
+.link {
+  margin-left: 10px;
+  opacity: 1;
+}
+
+.icons {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.icon {
+  fill: var(--inverted-primary-color);
+}
+
+.collapsed {
+  width: var(--sidebar-width-collapsed);
+
+  .switchers {
+    flex-direction: column;
+    align-items: center;
+    margin-left: 0;
+  }
+
+  .lang {
+    margin-left: 0;
+  }
+
+  .link {
+    width: 0;
+    opacity: 0;
+    transition: 0.15s opacity;
+  }
 }
