--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -13,4 +13,6 @@
   --sidebar-width: 300px;
   --sidebar-width-collapsed: 80px;
   --overlay-color: rgb(0 0 0 / 60%);
+  --red-light: red;
+  --red-dark: #ce0505;
 }
