--- a/src/features/user-auth/ui/login-form/LoginForm.module.scss
+++ b/src/features/user-auth/ui/login-form/LoginForm.module.scss
@@ -8,7 +8,19 @@
   margin-top: 10px;
 }
 
+.icon {
+  position: absolute;
+  top: 98px;
+  right: 28px;
+  color: var(--primary-color);
+  cursor: pointer;
+}
+
 .button {
   margin-top: 15px;
   margin-left: auto;
+}
+
+.error {
+  color: red;
 }
