--- a/src/shared/ui/button/Button.module.scss
+++ b/src/shared/ui/button/Button.module.scss
@@ -12,9 +12,9 @@
 }
 
 .outline {
-  color: var(--inverted-primary-color);
+  color: var(--primary-color);
   background: none;
-  border: 1px solid var(--inverted-primary-color)
+  border: 1px solid var(--primary-color)
 }
 
 .background {
@@ -58,4 +58,9 @@
 
 .size-xl {
   font: var(--font-xl);
+}
+
+.disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
 }
