--- a/src/shared/ui/modal/Modal.module.scss
+++ b/src/shared/ui/modal/Modal.module.scss
@@ -19,8 +19,9 @@
   padding: 20px;
   background: var(--bg-color);
   border-radius: 12px;
-  transform: scale(0.5);
+  transform: scale(0.6);
   transition: .3s transform;
+  animation: .3s ease-in 0s 1 normal none running animation;
 }
 
 .opened {
@@ -28,5 +29,23 @@
 
   .content {
     transform: scale(1);
+  }
+}
+
+@keyframes animation {
+
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+
+  60% {
+    transform: scale(0.6);
+    opacity: 0.6;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 1;
   }
 }
