add ts strict mode, profile pages

--- a/src/features/user-auth/ui/login-form/LoginForm.module.scss
+++ b/src/features/user-auth/ui/login-form/LoginForm.module.scss
@@ -1,26 +1,28 @@
 .form {
+  position: relative;
   display: flex;
   flex-direction: column;
-  width: 400px;
-}
+  width: 360px;
+  
+  .text {
+    display: flex;
+    justify-content: center;
+  }
 
-.input {
-  margin-top: 10px;
-}
+  .input {
+    margin-top: 10px;
+  }
 
-.icon {
-  position: absolute;
-  top: 98px;
-  right: 28px;
-  color: var(--primary-color);
-  cursor: pointer;
-}
+  .icon {
+    position: absolute;
+    top: 78px;
+    left: 314px;
+    color: var(--primary-color);
+    cursor: pointer;
+  }
 
-.button {
-  margin-top: 15px;
-  margin-left: auto;
-}
-
-.error {
-  color: red;
+  .button {
+    margin-top: 15px;
+    margin-left: auto;
+  }
 }
