--- a/src/shared/ui/text/Text.module.scss
+++ b/src/shared/ui/text/Text.module.scss
@@ -22,3 +22,15 @@
 .primary {
   color: var(--primary-color);
 }
+
+.left {
+  text-align: left;
+}
+
+.right {
+  text-align: right;
+}
+
+.center {
+  text-align: center
+}
