--- a/src/shared/ui/avatar/Avatar.module.scss
+++ b/src/shared/ui/avatar/Avatar.module.scss
@@ -1,6 +1,7 @@
 .avatar {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   border: 2px solid var(--primary-color);
   border-radius: 50%;
 }
