add sent form comment

--- a/src/pages/profile-page/ui/profile-page-header/ProfilePageHeader.module.scss
+++ b/src/pages/profile-page/ui/profile-page-header/ProfilePageHeader.module.scss
@@ -1,12 +1,12 @@
 .header {
   display: flex;
   align-items: center;
-  
-  .button {
-    margin-left: auto;
-  }
 
-  .button-save {
-    margin-left: 10px;
+  .button-wrapper{
+    margin-left: auto;
+  
+    .button-save {
+      margin-left: 10px;
+    }
   }
 }
