--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -27,7 +27,7 @@ body,
 
 .page-wrapper {
   flex-grow: 1;
-  width: 100%;
+  width: calc(100vh - var(--sidebar-width));
   height: calc(100vh - var(--navbar-height));
   padding: 20px 20px 20px 45px;
   overflow-y: auto;
