--- a/src/shared/ui/code/Code.module.scss
+++ b/src/shared/ui/code/Code.module.scss
@@ -14,4 +14,61 @@
   .icon {
     stroke: var(--primary-color);
   }
+
+  .tooltip {
+    position: absolute;
+    top: -50%;
+    right: 40px;
+    z-index: 1;
+    padding: 5px;
+    background: var(--inverted-bg-color);
+    border-radius: 9px;
+    box-shadow: 0 0 3px rgb(54 54 54 / 85%);
+    transform: translateY(9px);
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .tooltip::after {
+    position: absolute;
+    top: 25%;
+    left: 88%;
+    width: 0;
+    height: 0;
+    border-color: var(--inverted-bg-color) transparent;
+    border-style: solid;
+    border-width: 18px 13.5px 0;
+    transform: rotate(-90deg);
+    content: "";
+  }
+
+  .tooltip p {
+    width: 120px;
+    color: var(--bg-color);
+  }
+}
+
+.button:hover {
+  opacity: 1;
+
+  .tooltip {
+    transform: translateY(-10px);
+    transform: translateX(-6px);
+    visibility: visible;
+    opacity: 1;
+    transition: .3s linear;
+    animation: odsoky 1s ease-in-out infinite  alternate;
+  }
+}
+
+@keyframes odsoky {
+
+  0%{
+    transform: translateY(6px);
+  }
+
+  100%{
+    transform: translateY(1px);
+  }
 }
