--- a/src/shared/ui/card/Card.module.scss
+++ b/src/shared/ui/card/Card.module.scss
@@ -1,5 +1,12 @@
 .card {
   padding: 15px;
-  background: var(--card-bg);
   border-radius: 12px;
+}
+
+.primary {
+  background: var(--card-bg);
+}
+
+.outline {
+  border: 2px solid var(--primary-color);
 }
