--- a/src/entities/recommendation/ui/recommendations-list/RecommendationsList.module.scss
+++ b/src/entities/recommendation/ui/recommendations-list/RecommendationsList.module.scss
@@ -5,6 +5,7 @@
 .recommendation {
   display: flex;
   flex-wrap: nowrap;
+  gap: 30px;
   margin-top: 20px;
   overflow-x: auto;
   overflow-y: hidden;
