--- a/src/widgets/article-sorting-panel/ui/ArticleSortingPanel.module.scss
+++ b/src/widgets/article-sorting-panel/ui/ArticleSortingPanel.module.scss
@@ -3,5 +3,5 @@
   gap: 30px;
   align-items: flex-start;
   justify-content: space-between;
-  margin-bottom: 30px;
+  margin: 20px 20px 30px 45px;
 }
