--- a/src/entities/article/ui/article-item/ArticleItem.module.scss
+++ b/src/entities/article/ui/article-item/ArticleItem.module.scss
@@ -1,5 +1,6 @@
 .list {
   margin-bottom: 20px;
+  overflow: hidden;
 
   .header {
     display: flex;
@@ -42,8 +43,19 @@
   }
 
   .block {
+    position: relative;
     max-height: 250px;
     overflow-y: hidden;
+  }
+
+  .block::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 40px;
+    background: linear-gradient(180deg, transparent, var(--card-bg) 50%);
+    content: "";
   }
 
   .footer {
